{{$NEXT}}

1.42   2016-12-25

- The DateTime::Duration->add and ->subtract methods now accept
  DateTime::Duration objects. This used to work by accident, but this is now
  done intentionally (with docs and tests). Reported by Petr Pisar. GitHub
  #50.


1.41   2016-11-16

- The DateTime->add and ->subtract methods now accept DateTime::Duration
  objects. This used to work by accident, but this is now done intentionally
  (with docs and tests). Based on PR #45 from Sam Kington.


1.40   2016-11-12

- Switched from RT to the GitHub issue tracker.


1.39   2016-09-17

- Bump minimum required Perl to 5.8.4 from 5.8.1. Looking at CPAN Testers,
  this distro hasn't actually passed with earlier Perl versions since
  1.35. I'm not explicitly testing with anything earlier than 5.8.8


1.38   2016-09-16

- This release includes changes from past trial releases to switch from
  Params::Validate and Params::ValidationCompiler. Relevant release notes from
  those trial releases are repeated here for clarity.

- Replaced Params::Validate with Params::ValidationCompiler and Specio. In my
  benchmarks this makes constructing a new DateTime object about 14%
  faster. However, it slows down module load time by about 100 milliseconds
  (1/10 of a second) on my desktop system with a primed cache (so really
  measuring compile time, not disk load time).

- When you pass a locale to $dt->set you will now get a warning suggesting you
  should use $dt->set_locale instead. The previous trial releases didn't allow
  locale to be passed at all, which broke a lot of modules. I've sent PRs, but
  for now the parameter should be allowed (but discouraged). Reported by
  Slaven Rezić. RT #115420.

- Removed the long-deprecated DateTime->DefaultLanguage method. Use
  DefaultLocale instead.

- Removed the long-deprecated "language" constructor parameter. Use "locale"
  instead.


1.37   2016-08-14 (TRIAL RELEASE)

- Require the latest Params::ValidationCompiler (0.11).


1.36   2016-08-06
